docs: add documentation to all methods
